# gamma

./: .gitmodules  CMakeLists.txt  README.md  make-gcdb.sh
.github/workflows/: ubuntu.yml  windows.yml
oldsrc/: config.h.in  gamma.c  gamma_check.h  gamma_common.c  gamma_common.h  gamma_error.h  gamma_event.c  gamma_event.h  gamma_math.c  gamma_math.h  gamma_sprite.h  gamma_tags.h  gamma_time.h  gamma_utils.c  gamma_window.c  gamma_window.h
oldsrc/shaders/: default.frag  default.frag.h  default_alpha.frag.h  make-headers.sh
src/: gamecontrollerdb.txt.h  gamma.c  gamma.cc  gamma_agate.cc  gamma_agate.h  gamma_check.c  gamma_check.h  gamma_color.cc  gamma_color.h  gamma_common.h  gamma_debug.c  gamma_debug.cc  gamma_debug.h  gamma_error.c  gamma_error.h  gamma_event.c  gamma_event.cc  gamma_event.h  gamma_gfx.c  gamma_gfx.h  gamma_math.c  gamma_math.cc  gamma_math.h  gamma_meta.h  gamma_render.c  gamma_render.cc  gamma_render.h  gamma_root.c  gamma_root.h  gamma_sprite.c  gamma_sprite.cc  gamma_sprite.h  gamma_support.cc  gamma_support.h  gamma_tag.cc  gamma_tag.h  gamma_tags.h  gamma_text.cc  gamma_text.h  gamma_time.c  (+7 more)
src/shaders/: default.frag.h  default.vert  default.vert.h  default_alpha.frag  default_alpha.frag.h  make-headers.sh
unit/: gamma.agate
unit/gamma/: color.agate  event.agate  gfx.agate  math.agate  render.agate  scene.agate  sprite.agate  text.agate  time.agate  window.agate
